cli/src/tests/error/values.sibs
(one)
("one","two")
("one";two)
("one"; "two", "three")
(one,)
(one, two, )
(one, two, three, )